# IncrementalReadingConverter

./: .gitignore  Cargo.toml  README.md  converter.py  flatten.py  multitosinglelines.py  rustfmt.toml
src/lib/: anki_convert.rs  group_lines.rs  html_to_ir.rs  ir.rs  ir_to_anki.rs
src/lib/html_to_ir/: convert.rs  html.rs  mod.rs  optimize.rs  optnode.rs  optnodes.rs
src/lib/html_to_ir/html/: document.rs  mod.rs  node.rs  nodes.rs
src/lib/ir/: .mod.rs.swp  document.rs  ir.rs  mod.rs
src/lib/ir/list/: content.rs  item.rs  mod.rs  style.rs
src/lib/ir/table/: cell.rs  mod.rs  row.rs
src/lib/ir/textblock/: mod.rs  text.rs
